# OpenSeeFace

./: .emilianaFeatureExtractor.py.kate-swp  .gitignore  .stats.kate-swp  README.md  README.txt  dshowcapture.py  emilianaFeature.py  emilianaFeatureExtractor.py  escapi.py  eyes.py  face.py  facedetection.py  facetracker.py  facetracker.spec  facetracking.sh  feature.py  featureExtractor.py  input_reader.py  landmarks.py  make_exe.bat  make_exe.sh  model.py  preview.py  pyproject.toml  remedian.py  retinaface.py  run.bat  similaritytransform.py  tracker.py  vts.py  webcam.py
.github/actions/upload-dated-artifact/: action.yaml
.github/workflows/: create-binaries.yaml
Examples/: OpenSeeVRMDriver.cs  OpenSeeVRMExpression.cs  OpenSeeWebcamInfo.cs
Examples/Animations/: JawOpen.anim
Licenses/: DShowCapture.txt  IL2cppStartProcess.txt  OpenCV.txt  OpenSeeFace.txt  Pytorch_Retinaface.txt  Remedian.txt  escapi.txt  haarcascade_frontalface_alt2.txt  libminibmcapture.txt
Source/: SVMWrapper.cpp  ThunderSVMWrapper.cpp  svm.cpp  svm.h
Unity/: OpenSee.cs  OpenSeeExpression.cs  OpenSeeIKTarget.cs  OpenSeeInterpolation.cs  OpenSeeJobManagement.cs  OpenSeeKinematicInterpolation.cs  OpenSeeLauncher.cs  OpenSeeProcessInterface.cs  OpenSeeShowPoints.cs
Unity/Plugins/: SVMModel.cs  ThunderSVMModel.cs
models/: gaze_opt.onnx  lm_model0_opt.onnx  mnv3_detection_opt.onnx  mnv3_gaze32_16_split_opt.onnx  mnv3_gaze32_split_opt.onnx  mnv3_opt_very_fast.onnx  priorbox_384.json  priorbox_640x640.json  retinaface_640x640_opt.onnx  retinaface_opt.onnx  snv2_opt_fast.onnx
